--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -18,7 +18,14 @@
 # This properties file lists the versions of the various artifacts we use.
 # It drives ivy and the generation of a maven POM
 
+version=1.4.5-mapr
+
 avro.version=1.7.5
+
+hadoopversion=20
+hadoop-all.version=1.0.3-mapr2.1.2.1
+hadoop-test.version=1.0.3-mapr2.1.2.1
+hbase.version=0.92.2-mapr
 
 checkstyle.version=5.0
 
@@ -27,6 +34,8 @@ commons-collections.version=3.1
 commons-io.version=1.4
 commons-lang.version=2.4
 commons-logging.version=1.0.4
+
+slf4j.version=1.6.4
 
 hsqldb.version=1.8.0.10
 
