--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -23,9 +23,9 @@ version=1.4.5-mapr
 avro.version=1.7.5
 
 hadoopversion=20
-hadoop-all.version=1.0.3-mapr2.1.2.1
-hadoop-test.version=1.0.3-mapr2.1.2.1
-hbase.version=0.94.9-mapr
+hadoop-all.version=1.0.3-mapr-3.1.0
+hadoop-test.version=1.0.3-mapr-3.1.0
+hbase94.version=0.94.13-mapr-1401
 
 checkstyle.version=5.0
 
