Deleted SNAPSHOT from habse.version property

--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -25,7 +25,7 @@ avro.version=1.7.5
 hadoopversion=20
 hadoop-all.version=1.0.3-mapr-3.1.0
 hadoop-test.version=1.0.3-mapr-3.1.0
-hbase94.version=0.94.13-mapr-1401
+hbase94.version=0.94.9-mapr
 
 checkstyle.version=5.0
 
