SQOOP-1515: VersionRequestHandler - fixes
(Veena Basavaraj via Jarek Jarcec Cecho)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -163,13 +163,13 @@ show.prompt_server_port = @|bold Server port:|@ {0}
 show.prompt_server_webapp = @|bold Server webapp:|@ {0}
 
 show.prompt_display_all_versions = Display all versions
-show.prompt_display_version_server = Display server version
-show.prompt_display_version_client = Display client version
-show.prompt_display_version_protocol = Display protocol version
+show.prompt_display_version_server = Display server build version
+show.prompt_display_version_client = Display client build version
+show.prompt_display_version_api = Display Rest API version
 show.version_usage = Usage: show version
 show.prompt_version_client_server = @|bold {0} version:|@\n  Sqoop {1} \
-revision {2} \n  Compiled by {3} on {4}
-show.prompt_version_protocol = @|bold Protocol version:|@\n  {0}
+source revision {2} \n  Compiled by {3} on {4}
+show.prompt_version_api = @|bold API versions:|@\n  {0}
 
 sqoop.shell_banner = @|green Sqoop Shell:|@ Type '@|bold help|@' or '@|bold \\h|@' for help.
 sqoop.prompt_shell_loadrc = Loading resource file {0}
