SQOOP-1620: Sqoop2: FileSystem should be configurable in HDFS connector
(Abraham Elmahrek via Jarek Jarcec Cecho)

--- a/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
+++ b/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
@@ -17,6 +17,13 @@
 
 ############################
 
+# Link Config
+linkConfig.label = Link configuration
+linkConfig.help = Here you supply information necessary to connect to HDFS
+
+linkConfig.uri.label = HDFS URI
+linkConfig.uri.help = HDFS URI used to connect to HDFS
+
 # To Job Config
 #
 toJobConfig.label = ToJob configuration
