--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -99,6 +99,18 @@ limitations under the License.
     <url-pattern>/v1/link/*</url-pattern>
   </servlet-mapping>
 
+ <!-- Links servlet -->
+  <servlet>
+    <servlet-name>v1.LinksServlet</servlet-name>
+    <servlet-class>org.apache.sqoop.server.v1.LinksServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>v1.LinksServlet</servlet-name>
+    <url-pattern>/v1/links/*</url-pattern>
+  </servlet-mapping>
+
   <!-- Job servlet -->
   <servlet>
     <servlet-name>v1.JobServlet</servlet-name>
