SQOOP-1526: Sqoop2: Kerberos support when starting service
(Richard Zhou via Abraham Elmahrek)

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -49,6 +49,11 @@ limitations under the License.
     </dependency>
 
     <dependency>
+      <groupId>org.apache.sqoop</groupId>
+      <artifactId>sqoop-security</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.sqoop.submission</groupId>
       <artifactId>sqoop-submission-mapreduce</artifactId>
       <classifier>hadoop${hadoop.profile}</classifier>
