SQOOP-1640. Sqoop2: Pull DatabaseProvider into sqoop-common-test module
(Abraham Elmahrek via Hari Shreedharan)

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -37,6 +37,11 @@ limitations under the License.
 
     <dependency>
       <groupId>org.apache.sqoop</groupId>
+      <artifactId>sqoop-common-test</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.sqoop</groupId>
       <artifactId>sqoop-core</artifactId>
     </dependency>
 
