--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,11 @@ limitations under the License.
       </dependency>
       <dependency>
         <groupId>org.apache.sqoop</groupId>
+        <artifactId>sqoop-common-test</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.sqoop</groupId>
         <artifactId>sqoop-core</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -470,6 +475,7 @@ limitations under the License.
 
   <modules>
     <module>common</module>
+    <module>common-test</module>
     <module>spi</module>
     <module>core</module>
     <module>repository</module>
