SQOOP-1679: Sqoop2: Fix inconsistent naming in shell for entity driver in sqoop2
(Veena Basavaraj via Jarek Jarcec Cecho)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -140,8 +140,8 @@ show.prompt_connectors_to_show = @|bold {0} connector(s) to show: |@
 show.prompt_connector_info = Connector with id {0}:\n  Name: {1} \n  \
 Class: {2}\n  Version: {3}\n  Supported Directions {4}
 
-show.driver_config_usage = Usage: show driver config
-show.prompt_driver_config_opts = @|bold Driver config specific options: |@\nPersistent id: {0}
+show.driver_usage = Usage: show driver
+show.prompt_driver_opts = @|bold Driver specific options: |@\nPersistent id: {0}
 
 show.prompt_display_all_jobs = Display all jobs
 show.prompt_display_job_jid = Display jobwith given jid
