SQOOP-1589: Sqoop2: Create common constants, error codes, and queries
(Abraham Elmahrek via Jarek Jarcec Cecho)

--- a/repository/repository-derby/pom.xml
+++ b/repository/repository-derby/pom.xml
@@ -38,6 +38,11 @@ limitations under the License.
     </dependency>
 
     <dependency>
+      <groupId>org.apache.sqoop.repository</groupId>
+      <artifactId>sqoop-repository-common</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derby</artifactId>
     </dependency>
