--- a/pom.xml
+++ b/pom.xml
@@ -286,6 +286,11 @@ limitations under the License.
       </dependency>
       <dependency>
         <groupId>org.apache.sqoop.repository</groupId>
+        <artifactId>sqoop-repository-common</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.sqoop.repository</groupId>
         <artifactId>sqoop-repository-derby</artifactId>
         <version>${project.version}</version>
       </dependency>
