--- a/repository/repository-common/pom.xml
+++ b/repository/repository-common/pom.xml
@@ -22,19 +22,39 @@ limitations under the License.
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache</groupId>
-    <artifactId>sqoop</artifactId>
+    <groupId>org.apache.sqoop</groupId>
+    <artifactId>repository</artifactId>
     <version>2.0.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>org.apache.sqoop</groupId>
-  <artifactId>repository</artifactId>
-  <name>Sqoop Repository</name>
-  <packaging>pom</packaging>
+  <groupId>org.apache.sqoop.repository</groupId>
+  <artifactId>sqoop-repository-common</artifactId>
+  <name>Sqoop Common Repository</name>
 
-  <modules>
-    <module>repository-common</module>
-    <module>repository-derby</module>
-  </modules>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.sqoop</groupId>
+      <artifactId>sqoop-core</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.sqoop</groupId>
+      <artifactId>sqoop-core</artifactId>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+
+  </dependencies>
 
 </project>
