SQOOP-1527: Sqoop2: Kerberos support (SPNEGO) in communication between server and client
(Richard Zhou via Abraham Elmahrek)

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -51,9 +51,14 @@ limitations under the License.
       <artifactId>sqoop-common</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.sun.jersey</groupId>
-      <artifactId>jersey-client</artifactId>
-      <version>1.11</version>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-auth</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
