SQOOP-1588: Sqoop2: TO-side: Write data to HDFS
(Qian Xu via Abraham Elmahrek)

--- a/connector/pom.xml
+++ b/connector/pom.xml
@@ -36,6 +36,7 @@ limitations under the License.
     <module>connector-sdk</module>
     <module>connector-generic-jdbc</module>
     <module>connector-hdfs</module>
+    <module>connector-kite</module>
       <!-- Uncomment and finish connectors after sqoop framework will become stable
       <module>connector-mysql-jdbc</module>
       <module>connector-mysql-fastpath</module>
