SQOOP-1678: Sqoop2: [HDFS Connector] Configurable null values
(Abraham Elmahrek via Venkat Ranganathan)

--- a/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
+++ b/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
@@ -48,6 +48,15 @@ toJobConfig.outputDirectory.help = Output directory for final data
 toJobConfig.ignored.label = Ignored
 toJobConfig.ignored.help = This value is ignored
 
+toJobConfig.overrideNullValue.label = Override null value
+toJobConfig.overrideNullValue.help = If set to true, then the null value will \
+                                     be overridden with the value set in \
+                                     toJobConfig.nullValue.
+
+toJobConfig.nullValue.label = Null value
+toJobConfig.nullValue.help = Use this particular character or sequence of characters \
+                             as a value representing null when outputting to a file.
+
 # From Job Config
 #
 fromJobConfig.label = From Job configuration
@@ -55,3 +64,12 @@ fromJobConfig.help = Specifies information required to get data from Hadoop ecos
 
 fromJobConfig.inputDirectory.label = Input directory
 fromJobConfig.inputDirectory.help = Directory that should be exported
+
+fromJobConfig.overrideNullValue.label = Override null value
+fromJobConfig.overrideNullValue.help = If set to true, then the null value will \
+                                     be overridden with the value set in \
+                                     toJobConfig.nullValue.
+
+fromJobConfig.nullValue.label = Null value
+fromJobConfig.nullValue.help = Use this particular character or sequence of characters \
+                             as a value representing null when outputting to a file.
