SQOOP-1852: Sqoop2: Kafka connector supporting TO direction
(Gwen Shapira via Abraham Elmahrek)

--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -60,6 +60,21 @@ limitations under the License.
       <artifactId>postgresql</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka_2.10</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.zookeeper</groupId>
+      <artifactId>zookeeper</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
+
   </dependencies>
 
   <profiles>
