--- a/connector/pom.xml
+++ b/connector/pom.xml
@@ -37,10 +37,11 @@ limitations under the License.
     <module>connector-generic-jdbc</module>
     <module>connector-hdfs</module>
     <module>connector-kite</module>
-      <!-- Uncomment and finish connectors after sqoop framework will become stable
-      <module>connector-mysql-jdbc</module>
-      <module>connector-mysql-fastpath</module>
-      -->
+    <module>connector-kafka</module>
+    <!-- Uncomment and finish connectors after sqoop framework will become stable
+    <module>connector-mysql-jdbc</module>
+    <module>connector-mysql-fastpath</module>
+    -->
   </modules>
 
 </project>
