--- a/server/pom.xml
+++ b/server/pom.xml
@@ -84,6 +84,11 @@ limitations under the License.
       <artifactId>sqoop-connector-kite</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.sqoop.connector</groupId>
+      <artifactId>sqoop-connector-kafka</artifactId>
+    </dependency>
+
 <!--
     <dependency>
       <groupId>org.apache.sqoop.connector</groupId>
